<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_empleado"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_empleados" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/planilla" />
        <item
            android:id="@+id/nav_cargo"
            android:icon="@drawable/baseline_safety_divider_24"
            android:title="Cargo" />
    </group>
</menu>