<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.rrssapp.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_empleado"
        android:name="com.example.rrssapp.ui.empleado.EmpleadoFragment"
        android:label="@string/menu_empleados"
        tools:layout="@layout/fragment_empleado" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.rrssapp.ui.slideshow.SlideshowFragment"
        android:label="@string/planilla"
        tools:layout="@layout/fragment_slideshow" />
</navigation>